force-app/main/default/objects/Loan_Settings__c/Loan_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Loan Settings</label>
</CustomObject>