force-app/main/default/objects/Loan_Settings__c/fields/CBO_Day_Count_Convention__c.field-meta.xml
<CustomField>
    <fullName>CBO_Day_Count_Convention__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Day Count Convention</inlineHelpText>
    <label>Can Be Overridden On Loan Product</label>
    <type>Checkbox</type>
</CustomField>