force-app/main/default/objects/Loan_Settings__c/fields/CBO_Early_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>CBO_Early_Payment_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Early Payment Method</inlineHelpText>
    <label>Can Be Overridden On Loan Product</label>
    <type>Checkbox</type>
</CustomField>