force-app/main/default/objects/Loan_Settings__c/fields/CBO_Flat_Amount__c.field-meta.xml
<CustomField>
    <fullName>CBO_Flat_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flat Amount</inlineHelpText>
    <label>Can Be Overridden On Loan Product</label>
    <type>Checkbox</type>
</CustomField>