force-app/main/default/objects/Loan_Settings__c/fields/CBO_Late_Repayment_Fixed_Fee__c.field-meta.xml
<CustomField>
    <fullName>CBO_Late_Repayment_Fixed_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Late Repayment Fixed Fee</inlineHelpText>
    <label>Can Be Overridden On Loan Product</label>
    <type>Checkbox</type>
</CustomField>