force-app/main/default/objects/Loan_Settings__c/fields/CBO_Monitoring_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>CBO_Monitoring_Fee_Percentage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Be Overridden On Loan Product</label>
    <type>Checkbox</type>
</CustomField>