force-app/main/default/objects/Loan_Settings__c/fields/CBO_Percent_Of_Disbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>CBO_Percent_Of_Disbursement_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>% of Disbursement Amount</inlineHelpText>
    <label>Can Be Overridden On Loan Product</label>
    <type>Checkbox</type>
</CustomField>