force-app/main/default/objects/Loan_Settings__c/fields/CBO_Repayment_Allocation_Type__c.field-meta.xml
<CustomField>
    <fullName>CBO_Repayment_Allocation_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Be Overridden On Loan Product</label>
    <type>Checkbox</type>
</CustomField>