force-app/main/default/objects/Loan_Settings__c/fields/CBO_Repayment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>CBO_Repayment_Frequency__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Repayment Frequency</inlineHelpText>
    <label>Can Be Overridden On Loan Product</label>
    <type>Checkbox</type>
</CustomField>