force-app/main/default/objects/Loan_Settings__c/fields/CBO_Setup_Fee_Charging_Method__c.field-meta.xml
<CustomField>
    <fullName>CBO_Setup_Fee_Charging_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Setup Fee Charging Method</inlineHelpText>
    <label>Can Be Overridden On Loan Product</label>
    <type>Checkbox</type>
</CustomField>