force-app/main/default/objects/Loan_Settings__c/fields/Early_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Early_Payment_Method__c</fullName>
    <inlineHelpText>- Only Interest Due To Date Charged
- Full Interest For Scheduled Periods Charged</inlineHelpText>
    <label>Early Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>