force-app/main/default/objects/Loan_Settings__c/fields/Flat_Amount__c.field-meta.xml
<CustomField>
    <fullName>Flat_Amount__c</fullName>
    <label>Flat Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>