force-app/main/default/objects/Loan_Settings__c/fields/Late_Repayment_Fees_Charging__c.field-meta.xml
<CustomField>
    <fullName>Late_Repayment_Fees_Charging__c</fullName>
    <label>Late Repayment Fees Charging</label>
    <length>255</length>
    <type>Text</type>
</CustomField>