force-app/main/default/objects/Loan_Settings__c/fields/Non_Working_Days_Rescheduling__c.field-meta.xml
<CustomField>
    <fullName>Non_Working_Days_Rescheduling__c</fullName>
    <label>Non-Working Days Rescheduling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>