force-app/main/default/objects/Loan_Settings__c/fields/Repayment_Allocation_Order__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Allocation_Order__c</fullName>
    <label>Repayment Allocation Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>