force-app/main/default/objects/Loan_Settings__c/fields/Repayment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Frequency__c</fullName>
    <label>Repayment Frequency</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>