force-app/main/default/objects/Loan_Settings__c/fields/Repayment_Frequency_Unit__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Frequency_Unit__c</fullName>
    <inlineHelpText>- Days
- Weeks
- Months
- Years</inlineHelpText>
    <label>Repayment Frequency Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>