force-app/main/default/objects/Loan_Settings__c/fields/Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee__c</fullName>
    <inlineHelpText>- % of Disbursement Amount
- Flat Amount</inlineHelpText>
    <label>Setup Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>