force-app/main/default/objects/Loan_Settings__c/fields/Setup_Fee_Charging_Method__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee_Charging_Method__c</fullName>
    <inlineHelpText>- Paid Up Front (manual)
- Paid Up Front (scheduled)
- Capitalized
- Deducted From Principal</inlineHelpText>
    <label>Setup Fee Charging Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>